--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "start-dev": "set ELECTRON_DEVELOP=1 && npm run webpack && electron .",
     "webpack": "webpack --mode production",
     "webpack-w": "webpack --mode development -w",
-    "build": "npm run clean && npm run webpack && build -p never",
+    "build": "npm run clean && npm run webpack && build",
     "clean": "npm run clean-build && npm run clean-webpack",
     "clean-webpack": "rm -rf ./dist",
-    "clean-build": "rm -rf ./release",
+    "clean-build": "rm -rf ./build",
     "test": "jest",
     "lint": "eslint .",
     "start-mock-server": "node ./__mocks__/server.js",
@@ -29,9 +29,9 @@
   "author": "Anachitheu.k@gmail.com",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Anechasun/ptimus-postgresql.git"
+    "url": "git+https://github.com/Anechasun/optimus-postgresql.git"
   },
-  "homepage": "https://github.com/Anechasun/ptimus-postgresql.git#readme",
+  "homepage": "https://github.com/Anechasun/optimus-postgresql.git#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
     "bootstrap": "^4.1.3",
@@ -78,7 +78,7 @@
     "appId": "com.electron.optimus",
     "productName": "optimus",
     "directories": {
-        "output": "release/"
+        "output": "build/"
     },
     "files": [
         "node_modules/",
@@ -97,6 +97,12 @@
         "nsis"
       ]
     },
-    "publish": false
+    "publish": [
+        {
+          "provider": "github",
+          "owner": "Anechasun",
+          "repo": "optimus-postgresql.git"
+        }
+      ]
   }
 }
