--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   "author": "Anachitheu.k@gmail.com",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Anechasun/optimus-postgresql.git"
+    "url": "git+https://github.com/Anechasun/gateway-database-client.git"
   },
-  "homepage": "https://github.com/Anechasun/optimus-postgresql.git#readme",
+  "homepage": "https://github.com/Anechasun/gateway-database-client.git#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
     "bootstrap": "^4.1.3",
@@ -78,18 +78,19 @@
     }
   },
   "build": {
-    "appId": "com.electron.optimus",
-    "productName": "optimus",
+    "appId": "com.electron.gateway-database",
+    "productName": "gateway-database",
     "directories": {
       "output": "build/"
     },
     "files": [
+      "database",
       "node_modules/",
       "dist/",
       "renderer/",
       "resources/",
       "utils/",
-      "Connection.js",
+      "Memory.js",
       "main.js",
       "config.js",
       "package.json"
@@ -104,7 +105,7 @@
       {
         "provider": "github",
         "owner": "Anechasun",
-        "repo": "optimus-postgresql"
+        "repo": "gateway-database-client"
       }
     ]
   }
