--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "gateway-database",
   "private": true,
-  "version": "2.0.0",
-  "description": "system external connection database",
+  "version": "2.1.0",
+  "description": "database connection to external",
   "main": "main.js",
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
     "start": "npm run webpack && electron .",
     "start-dev": "set ELECTRON_DEVELOP=1 && npm run webpack && electron .",
     "start-server": "node ./server/index.js",
@@ -16,8 +17,7 @@
     "clean-webpack": "rm -rf ./dist",
     "clean-build": "rm -rf ./build",
     "test": "jest",
-    "lint": "eslint .",
-    "postinstall": "electron-builder install-app-deps"
+    "lint": "eslint ."
   },
   "keywords": [
     "electron",
@@ -25,8 +25,10 @@
     "sqlite3",
     "postgresql",
     "mysql",
+    "mssql",
     "socket.io",
-    "request"
+    "request",
+    "bootstrap"
   ],
   "author": "Anachitheu.k@gmail.com",
   "repository": {
@@ -38,6 +40,7 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "mssql": "^5.1.0",
     "mysql": "^2.17.1",
     "pg": "^7.4.3",
     "popper.js": "^1.14.4",
