--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gateway-database",
+  "name": "api-gateway-database",
   "private": true,
   "version": "2.1.1",
   "description": "database connection to external",
